* Wed Aug 23 2023 Steven Pritchard <steve@sicura.us> - 0.4.0
- Add AlmaLinux 8 support

* Mon Jun 12 2023 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.3.0
- Add RockyLinux 8 support

* Sat Jan 22 2022 Trevor Vaughan <trevor@sicura.us> - 0.2.1
- Added support for Amazon Linux 2

* Mon Jun 14 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.2.0
- Removed support for Puppet 5
- Ensured support for Puppet 7 in requirements and stdlib

* Thu Dec 17 2020 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.1.1
- Removed EL6 support

* Fri Dec 06 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.1.0
- Add EL8 support

* Fri Aug 02 2019 Robert Vincent <pillarsdotnet@gmail.com> - 0.1.0
- Support puppetlabs/concat 6.x and puppetlabs/stdlib 6.x.
- Drop Puppet 4 support

* Mon Mar 25 2019 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 0.0.7
- replaced simpcat with concat
- make sure the version of concat is updated

* Thu Mar 07 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 0.0.6
- Update the upper bound of stdlib to < 6.0.0
- Update a URL in the README.md

* Thu Nov 01 2018 Jeanne Greulich <jeanner.greulich@onyxpoint.com> - 0.0.5
- Update static assets for puppet 5
- Update to onyxpoint OEL boxes in acceptance tests

* Sun Mar 11 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.0.4
- Updated to work with Puppet 5 and OEL

* Fri May 19 2017 Nick Miller <nick.miller@onyxpoint.com> - 0.0.3
- Remove deprecated `audit` metaparameter
- Update puppet dependency

* Wed Apr 26 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.0.3
- Ensure that entries in 'at.allow' are not commented out by default
- Updated the Gemfile to pin to the latest working Beaker

* Thu Mar 02 2017 Nick Miller <nick.miller@onxypoint.com> - 0.0.2
- Manage at package

* Wed Dec 7 2016 Nick Miller <nick.miller@onxypoint.com> - 0.0.1
- First cut
- Content moved from simplib, added tests